--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/zpv/cryptpay-client#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "coinmarketcap-api": "^2.0.0",
     "ethereumjs-tx": "^1.3.3",
     "ethereumjs-util": "^5.1.3",
@@ -27,6 +28,7 @@
     "install": "^0.10.2",
     "moment": "^2.19.3",
     "npm": "^5.6.0",
+    "otplib": "^11.0.1",
     "play-sound": "^1.1.2",
     "readline-sync": "^1.4.7",
     "request": "^2.83.0",
